fix(frontend): prevent img overflowing container

--- a/packages/frontend/styles/base/embedded.css
+++ b/packages/frontend/styles/base/embedded.css
@@ -14,6 +14,7 @@ embed,
 object {
   block-size: auto;
   display: block;
+  inline-size: 100%;
   max-inline-size: 100%;
   page-break-inside: avoid;
 }
